# fcast-android-sender

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  gradle.properties  research-android12-activity-keyboard.md
.claude/: settings.local.json
.claude/commands/: debug-android-nix.md
.github/workflows/: android-debug-apk.yml  android-instrumented-tests.yml  android-release-apk.yml  gstpop-smoke.yml  slint-viewer-smoke.yml  symbol-stability.yml  ui-lint.yml
app/: build.gradle  proguard-rules.pro
app/jni/: Android.mk
ci/: build-gstreamer-android-glue.sh  build-rust-android-lib.sh  jni-symbol-baseline.txt  ui-validate.sh
crates/gstpop-runtime/: Cargo.toml
crates/gstpop-runtime/src/: lib.rs  protocol.rs
crates/migration-runtime/: Cargo.toml
crates/migration-runtime/src/: frame_pair.rs  lib.rs  messages.rs  node_manager.rs  runtime.rs  whep_signaller_compat.rs
crates/migration-runtime/src/nodes/: control.rs  destination.rs  mixer.rs  mod.rs  screen_capture.rs  source.rs  video_generator.rs
docs/: android12-soft-keyboard-patch-guide.md  cross-repo-sync.md  deep-research-gstpop-demon.md  gstpop-android-mvp-plan.md  gstpop-android-service-guide.md  gstpop-service-architecture.md  migration-runtime-android-service-guide.md  migration-runtime-service-architecture.md  service-configuration.md  srt-and-overlays.md  test-functionality-page-guide.md  ui-testing-tutorial.md
docs/android12-soft-keyboard-patch/: 00-overview.md  01-manifest-check.md  02-install-ime-bridge.md  03-rust-ime-view.md  04-show-hide-from-native.md  05-native-jni-wiring.md  06-runtime-sanity-checks.md  07-route-a-game-text-input.md  08-non-goals-and-risks.md  09-checklist.md  README.md
docs/examples/: custom-overlay.md  new-service-backend.md
docs/gstpop-android-mvp-plan/: README.md  step-01-embedded-config.md  step-02-preserve-prebind.md  step-03-typed-client.md  step-04-android-safe-media.md  step-05-integration-tests.md  step-06-android-arm64-build.md  step-07-jni-bridge.md  step-08-media-discovery.md  step-09-typed-protocol.md  step-10-desktop-tools.md  step-11-multi-abi-android.md  step-12-desktop-cli-crate.md  step-13-signal-handling.md
docs/gstpop-android-service-guide/: 00-plan-review.md  01-continuity-contract.md  02-rust-daemon-api.md  03-jni-and-java-bridge.md  04-android-service.md  05-rewire-lifecycle.md  06-tighten-probe.md  07-slint-ui-state.md  08-shutdown-policy.md  09-race-recovery.md  10-test-plan.md  11-cleanup-checklist.md  12-open-decisions.md  13-file-change-list.md  14-references.md  README.md
docs/gstpop-runtime-crate-extraction/: 00-overview.md  01-workspace-skeleton.md  02-move-protocol-and-client.md  03-move-embedded.md  04-relocate-backend-impl.md  05-relocate-service.md  06-rewrite-app-imports.md  07-verification.md  IMPLEMENTATION-NOTES.md  README.md
docs/migration-runtime-android-service-guide/: 00-plan-review.md  01-rust-jni-bridge.md  02-java-bridge.md  03-android-service.md  04-android-manifest.md  05-rust-caller-helper.md  06-slint-ui-integration.md  07-build-and-package.md  08-test-plan.md  09-file-change-list.md  10-references.md  README.md
docs/migration-runtime-crate-extraction/: 00-overview.md  03-move-node-manager-and-runtime.md  05-move-whep-and-destination.md
docs/refactor-implementation-guide/: 00-baseline-and-scope.md  01-screencapture-service-hardening.md  02-remove-localbroadcastmanager.md  03-mainactivity-lifecycle-cleanup.md  04-capture-engine-extraction.md  05-composition-root-and-interfaces.md  06-config-and-secret-store-split.md  07-split-src-lib-rs.md  08-mainactivity-split-and-kotlin-shell.md  09-ci-cd-consolidation.md  10-android-tests.md  11-build-stack-upgrade.md  12-performance-pass.md  13-rollout-and-rollback.md  99-references.md  README.md
docs/service-abstraction-refactor-guide/: INDEX.md  STEP-01-service-manager-trait.md  STEP-02-gstpop-service-refactor.md  STEP-03-migration-service-wrapper.md  STEP-04-service-config-storage.md  STEP-05-ui-service-config-page.md  STEP-06-ui-service-bridge.md  STEP-07-refactor-media-backend-page.md  STEP-08-main-ui-decoupling.md  STEP-09-srt-source-manager.md  STEP-10-image-overlay-system.md  STEP-11-mixer-overlay-integration.md  STEP-12-srt-overlay-ui.md  STEP-13-module-reorganisation.md  STEP-14-error-handling.md  STEP-15-testing-infrastructure.md  STEP-16-documentation-examples.md
docs/test-functionality-page-guide/: INDEX.md  STEP-01-panel-enum-variant.md  STEP-02-bridge-properties.md  STEP-03-state-global.md  STEP-04-camera-source-section.md  STEP-05-srt-source-section.md  STEP-06-image-overlay-section.md  STEP-07-assemble-page.md  STEP-08-register-main.md  STEP-09-rust-callbacks.md  STEP-10-navigation-entry.md
docs/ui-slint-best-practices/: 00-overview.md  (+16 more)
gradle/: libs.versions.toml
scripts/: build-deploy.sh  check-slint-viewer.sh  smoke-gstpop.sh  smoke.sh
src/: android_main.rs  app.rs  error.rs  lib.rs  log_ring.rs  migration_service.rs
tests/: overlay_tests.rs  persistence_tests.rs  service_tests.rs  srt_tests.rs  ui_snapshots.rs
ui/: bridge.slint  main.slint  theme.slint
(+424 files in other folders)
