[workspace]
members = [".", "crates/migration-runtime", "crates/gstpop-runtime", "vendor/gstpop"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
gst = { package = "gstreamer", version = "0.25" }
gst-app = { package = "gstreamer-app", version = "0.25", features = ["v1_24"] }
gst-video = { package = "gstreamer-video", version = "0.25", features = ["v1_24"] }
gst_rs_webrtc = { package = "gst-plugin-webrtc", version = "0.15", default-features = false, features = ["static"] }
lazy_static = "1.5"
log = "0.4"
mcore = { git = "https://github.com/kodyka/fcast", rev = "63980e6736e65adbd15588d21903d0c02223c15c" }
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[package]
name = "android-sender"
version = "0.1.0"
edition = "2021"
description = "FCast Android sender app (Slint UI + GStreamer + WHEP signaller)."
license = "MIT"
repository = "https://github.com/kodyka/fcast-android-sender"
readme = "README.md"
publish = false

[dependencies]
android_logger = "0.15.0"
ndk-context = "0.1.1"
jni = "0.21.1"
slint = { version = "1.16.0", default-features = false, features = ["backend-android-activity-06", "compat-1-2", "std"] }
async-channel = "2.3.1"
lazy_static.workspace = true
futures-core = "0.3.31"
tokio.workspace = true
gst-video.workspace = true
gst-app.workspace = true
anyhow.workspace = true
thiserror = "1"
crossbeam-channel = "0.5.15"
gst.workspace = true
fcast-protocol = { git = "https://github.com/kodyka/fcast", rev = "63980e6736e65adbd15588d21903d0c02223c15c" }
fcast-sender-sdk = { git = "https://github.com/kodyka/fcast", rev = "63980e6736e65adbd15588d21903d0c02223c15c", default-features = false, features = [ "fcast" ] }
mcore.workspace = true
parking_lot.workspace = true
tracing-gstreamer = "0.9.0"
tracing.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-trait.workspace = true
once_cell.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing-subscriber = "0.3"
gst_rs_webrtc.workspace = true
migration-runtime = { path = "crates/migration-runtime" }
gstpop-runtime = { path = "crates/gstpop-runtime" }

[build-dependencies]
slint-build = "1.16.0"

[dev-dependencies]
tempfile = "3"
i-slint-backend-testing = "1.16.0"

[lib]
name = "fcastsender"
crate-type = ["cdylib"]

[package.metadata.android]
package = "org.fcast.sender"
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android", "i686-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "1.16.0", features = ["backend-winit"] }
